--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <title>Ravi Teja</title>
   <style>
     body {
-      font-family: "IBM Plex Mono", monospace;
+      font-family:  "Poppins", sans-serif;
     }
   </style>
 </head>
